fix menu/help mismatches

--- a/html/Hnano.htm
+++ b/html/Hnano.htm
@@ -369,13 +369,13 @@ a:visited {
           <dt id="p60"><p><a href="#U131">SCALE/DIV</a></p><p>
 		<tt>touch nanoVNA screen below menu to launch numeric keypad;<br>
 		click hyperlink for numeric input discussion</tt>
-		<a href="#U132">NUM KEYS</a></p></dt>
+		<a href="#U132">REFERENCE POSITION</a></p></dt>
           <dt><p>
           <tt>position trace vertically</tt>
-          <a href="#U132">REFERENCE POSITION</a></p><p>
+          <a href="#U133">NUM KEYS</a></p><p>
 	<tt>touch below menu to launch</tt>NUM KEYS</p></dt>
 	  <dt><p><tt>compensate CAL by e.g. cable length in picoseconds</tt>
-		<a href="#U133">ELECTRICAL DELAY</a></p><p>
+		<a href="#U134">ELECTRICAL DELAY</a></p><p>
 		<tt>touch below menu to launch</tt>NUM KEYS</p></dt>
         </dl>
       </li>
