--- a/html/Hnano.htm
+++ b/html/Hnano.htm
@@ -325,7 +325,7 @@ a:visited {
 
 <body translate="no">
 <base href="../">
-<h3 align=center><a href="#U0">nanoVNA</a> Menu</h3>
+<h3 align=center><a href="#U0">nanoVNA</a> Menu for <em>original</em> firmware</h3>
 
 <div class="tree">
 <p>Press control or touch screen for menu</p>
