link Hnano to html for original; use FQDN for jpg in software

--- a/html/software.htm
+++ b/html/software.htm
@@ -69,7 +69,7 @@ An ST-Link connector can be soldered to the NanoVNA.<br>
 </dl>
 <h4>loading firmware on macOS or linux</h4>
 Power nanoVNA off, jumper boot pins, power on.<br>
-<img src="NanoVNAboot.jpg">
+<img src="https://oristopo.github.io/nVhelp/html/NanoVNAboot.jpg">
 <br clear=all>
 <dl>
 <dt><code>$ cd to folder</code>
