--- a/html/Hnano.htm
+++ b/html/Hnano.htm
@@ -324,7 +324,7 @@ a:visited {
  -->
 
 <body translate="no">
-<base href="../">
+<base href="nVhelp.htm">
 <h3 align=center><a href="#U0">nanoVNA</a> Menu for <em>original</em> firmware</h3>
 
 <div class="tree">
