matching nVhelp and index.md updates

--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -49,8 +49,11 @@ by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 </ul>
 
 <h3><a href="https://github.com/cho45/NanoVNA-manual/blob/master/index.md">unofficial user guide</a></h3>
-<em>thanks to cho45</em> 
+<em>thanks to cho45</em>   
 
+<h4><a href="http://www.rvhfg.org/pdf/articles/55.pdf">Keysight</a></h4>
+<h4><a href="http://hpmemoryproject.org/an/pdf/an_150-15.pdf">Agilent</a></h4>
+      
 <h4><a href="https://www.youtube.com/watch?v=mKi6s3WvBAM">beginners guide video</a></h4>
 <em>thanks to Joe Smith</em>
 
@@ -69,11 +72,11 @@ by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 <strong>Frequency error</strong> <code class="highlighter-rouge">&lt; 0.5ppm</code><br>
 <strong>Battery</strong> <code class="highlighter-rouge">602035 3.7V 350mAh 20x35x6mm</code><br>
 <strong>multi-directional switch</strong> <code class="highlighter-rouge">K1-1502SA</code><br>
-<strong><a href="https://github.com/hugen79/NanoVNA-H/blob/master/doc/Schematic_nanovna_3.3.1.png">schematic diagram</a></strong>
+<strong><a href="https://github.com/hugen79/NanoVNA-H/blob/master/doc/Schematic_nanovna_3.3.1.png">schematic diagram</a></strong><br>
 
 <p><em>thanks to Warren Allgyer</em>:<br />
 <img src="https://raw.githubusercontent.com/oristopo/nVhelp/master/html/nanoSpectrum.gif" alt="harminics" title="Si5351 harmonics" /><br />
-Unlike traditional VNAs, nanoVNA stimulus waveform is square, rather than sine.<br>
+Unusually, nanoVNA stimulus waveform is square, rather than sinusoidal.<br>
 Above <code class="highlighter-rouge">300MHz</code>, nanoVNA boosts <code class="highlighter-rouge">Si5351</code> output and uses its 3rd harmonic.</p>
 
 <p><em>thanks to hugen@outlook.com:</em></p>
@@ -211,7 +214,7 @@ to bring up its command shell prompt.</li>
 
 <p><a href="https://oristopo.github.io/nVhelp/html/software.htm"><em>Here</em></a> is more software information.</p>
 
-<p><a href="https://groups.io/g/nanovna-users/files/NanoVNA%20Console%20Commands%208-6-19.pdf"><em>Here</em></a> are Console Commands</p>
+<p><a href="https://groups.io/g/nanovna-users/files/NanoVNA%20Console%20Commands%208-6-19.pdf"><em>Here</em></a> are Console Commands</p> &nbsp <a href="https://groups.io/g/nanovna-users/topic/temporary_workaround_to/34127733">command instability workaround</a></p>
 
 <h2 id="technical">Technical</h2>
 
