--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -51,9 +51,10 @@ by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 <h3><a href="https://github.com/cho45/NanoVNA-manual/blob/master/index.md">unofficial user guide</a></h3>
 <em>thanks to cho45</em>   
 
+<h4>VNA Basics</h4>
 <h4><a href="http://www.rvhfg.org/pdf/articles/55.pdf">Keysight</a></h4>
 <h4><a href="http://hpmemoryproject.org/an/pdf/an_150-15.pdf">Agilent</a></h4>
-      
+<br>     
 <h4><a href="https://www.youtube.com/watch?v=mKi6s3WvBAM">beginners guide video</a></h4>
 <em>thanks to Joe Smith</em>
 
