move USB connector to physical

--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -50,7 +50,7 @@ by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 
 <h3><a href="https://github.com/cho45/NanoVNA-manual/blob/master/index.md">unofficial user guide</a></h3>
 <em>thanks to cho45</em>   
-
+<br>
 <h4>VNA Basics</h4>
 <h4><a href="http://www.rvhfg.org/pdf/articles/55.pdf">Keysight</a></h4>
 <h4><a href="http://hpmemoryproject.org/an/pdf/an_150-15.pdf">Agilent</a></h4>
@@ -67,13 +67,14 @@ by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 <h4><a href="https://drive.google.com/file/d/1usvmcn4cR8Ltrb6fT05jA6g7O0uhJozL/view">"official" manual</a></h4>
 
 <h2>Physical attributes</h2>
-<strong>Measurement range</strong>:<br />
+<b>Measurement range</b>:<br />
  <code class="highlighter-rouge">70dB (50kHz-300MHz), 50dB (300M-600MHz), 40dB (600M-900MHz)</code><br />
-<strong>Port SWR</strong> <code class="highlighter-rouge">&lt; 1.1</code><br />
-<strong>Frequency error</strong> <code class="highlighter-rouge">&lt; 0.5ppm</code><br>
-<strong>Battery</strong> <code class="highlighter-rouge">602035 3.7V 350mAh 20x35x6mm</code><br>
-<strong>multi-directional switch</strong> <code class="highlighter-rouge">K1-1502SA</code><br>
-<strong><a href="https://github.com/hugen79/NanoVNA-H/blob/master/doc/Schematic_nanovna_3.3.1.png">schematic diagram</a></strong><br>
+<b>Port SWR</b> <code>&lt; 1.1</code><br />
+<b>Frequency error</b> <code>&lt; 0.5ppm</code><br>
+<b>Battery</b> <code>602035 3.7V 350mAh 20x35x6mm</code><br>
+<b>multi-directional switch</b> <code>K1-1502SA</code><br>
+<b>USB connectors</b> <code>Type C except for Micro-USB B on white gekkos.</code><br>
+<b><a href="https://github.com/hugen79/NanoVNA-H/blob/master/doc/Schematic_nanovna_3.3.1.png">schematic diagram</a></b><br>
 
 <p><em>thanks to Warren Allgyer</em>:<br />
 <img src="https://raw.githubusercontent.com/oristopo/nVhelp/master/html/nanoSpectrum.gif" alt="harminics" title="Si5351 harmonics" /><br />
@@ -90,7 +91,6 @@ For <code class="highlighter-rouge">300MHz</code> output, VCOs are overclocked t
 If significant spike artifacts are noted (&gt; <code class="highlighter-rouge">0dB</code>) at <code class="highlighter-rouge">300MHz</code> or <code class="highlighter-rouge">900MHz</code>,<br />
 then <a href="#F800"><code class="highlighter-rouge">800MHz</code> firmware is recommended</a>.</p>
 
-<p>USB connectors are Type C except for Micro-USB B on white gekkos.<br />
 One LED (between USB and power switch) blinks @ 1/2Hz while charging,<br />
  then illuminates constantly;<br />
     - remaining on for 40 seconds after disconnecting USB or powering off,<br />
