convert calibrations to details

--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -112,6 +112,10 @@ nudging left or right migrates among menu items or moves selected marker.</p>
 <em>thanks to Larry Goga</em></p>
 
 <h4>Calibration for 4 track nanoVNA</h4>
+
+<details>
+<summary>click for calibration steps</summary>
+
 <p><em>thanks to Alan Victor</em></p>
 
 <h5 id="some-notes">Some notes:</h5>
@@ -158,7 +162,13 @@ Finally save to a desired register.</li>
 <p>Also, with SMA coupler connecting cables to CH0 and CH1, <br />
 <code class="highlighter-rouge">S21</code> should measure nearly <code class="highlighter-rouge">0dB</code>.</p>
 
+</details>
+
 <h4 id="TSC">Touchscreen Calibration</h4>
+
+<details>
+<summary>click for calibration procedure</summary>
+
 <p><em> thanks to Larry Rothman</em>:</p>
 
 <p>For best behavior, nanoVNA devices need touchscreen calibraton,<br />
@@ -204,6 +214,8 @@ to bring up its command shell prompt.</li>
 <p>You can verify touch calibration using the menu boxes.</p>
 
 <p><strong>NOTE</strong>: saveconfig command probably also saves calibration data</p>
+
+</details>
 
 <h2 id="software-and-firmware">Software and Firmware</h2>
 
