--- a/html/nVhelp.htm
+++ b/html/nVhelp.htm
@@ -48,8 +48,8 @@
 by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 </ul>
 
-<h3><a href="https://github.com/cho45/NanoVNA-manual/blob/master/index.md">unofficial user guide</a></h3>
-<em>thanks to cho45</em>   
+<h4><a href="https://github.com/cho45/NanoVNA-manual/blob/master/index.md">unofficial user guide</a></h4>
+<em>thanks to cho45</em><br>   
 <br>
 <h4>VNA Basics</h4>
 <h4><a href="http://www.rvhfg.org/pdf/articles/55.pdf">Keysight</a></h4>
@@ -65,7 +65,7 @@ by sorting resistance vs reactance instead of lumped <em>magnitude</em>.</li>
 <em>thanks to Volker Block</em>
 
 <h4><a href="https://drive.google.com/file/d/1usvmcn4cR8Ltrb6fT05jA6g7O0uhJozL/view">"official" manual</a></h4>
-
+<br>
 <h2>Physical attributes</h2>
 <b>Measurement range</b>:<br />
  <code class="highlighter-rouge">70dB (50kHz-300MHz), 50dB (300M-600MHz), 40dB (600M-900MHz)</code><br />
@@ -149,6 +149,7 @@ Finally save to a desired register.</li>
 
 </details>
 
+<br>
 <h4 id="TSC">Touchscreen Calibration</h4>
 
 <details>
@@ -202,6 +203,7 @@ to bring up its command shell prompt.</li>
 
 </details>
 
+<br>
 <h2 id="software-and-firmware">Software and Firmware</h2>
 
 <h4 id="F800">firmware mitigation for nanoVNA <code>300MHz, 600MHz</code> spikes</h4>
