firmware.html updated from altavista

--- a/html/hardware.htm
+++ b/html/hardware.htm
@@ -53,7 +53,8 @@ Variations may come
 <dd><a href="https://groups.io/g/nanovna-users/message/3356">full case</a><br>
 <img src="NanoVNA-H.png"><br clear=all>
 <br><dt>NanoVNA-H V2
-<dd>V2 will use two synthesizers that overlap and allow it to exceed a 1 GHz measurement range
+<dd>V2 will use two synthesizers that overlap for up to ~ 3 GHz measurement range
+<dd><a href="https://groups.io/g/nanovna-users/search?q=posterid:1988907"https://groups.io/g/nanovna-users/search?q=posterid:1988907">messages</a> by NanoVNA V2 layout designer Gabriel Tenma White
 <br>A preview @ <a href="https://www.rtl-sdr.com/a-nanovna-2-0-is-in-the-works-same-price-frequency-range-up-to-3-5-ghz-higher-dynamic-range/comment-page-1/">RTL-SDR.COM</a><br>
 <img src=https://groups.io/g/nanovna-users/attachment/3939/0/NanoVNA%20V2%20Preliminary%20Block%20Diagram.png">
 <br clear=all>
