added 10KHz-1.5GHz firmware

--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -27,6 +27,7 @@
 <details>
 <summary>click here for some firmware naming conventions</summary>
 A typical name is <code>NanoVNA-H_900_ch_20191003.dfu</code>
+
 <dl>
 <dt>NanoVNA-H
 <dd>owner or special purpose.  edy255 "owns" NanoVNA; Gen Hu "owns" NanoVNA-H
@@ -50,6 +51,9 @@ Some firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU
 
 <br><br><dt>Larry Rothman's <a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019">Firmware Archive</a>
 <dd>much of that content is described below
+
+<br><br><dt>latest build code: 10KHz-1.5GHz_05.10.2019.rar
+<dd>DMR <a href="https://groups.io/g/nanovna-users/message/4073">message append</a>
 
 <br><br><dt>Gen Hu Google Drive 
 <dd><a href="https://drive.google.com/drive/folders/1IRz6E1wlkRyV0u7sbqj0lhWST-GV1szY">Google Drive folder</a>
