--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -73,7 +73,7 @@ Some firmware installations fail until after first loading "DMR-CLEAR_MEMORY_DFU
 <dd><a href="https://groups.io/g/nanovna-users/files/Firmware">files folder</a> primarily intended for use with <a href="https://groups.io/g/nanovna-users/files/NanoVNA%20PC%20Software/TAPR%20VNA">TAPR VNA v4 PC software</a>
 
 <br><br><dt>cho45 nightly builds 
-<dd><a href="https://cho45.stfuawsc.com/NanoVNA/dfu.html">web page</a> and <a href="https://cho45.stfuawsc.com/NanoVNA">change log</a> which notes bug fixes and functional changes
+<dd><a href="https://cho45.stfuawsc.com/NanoVNA/dfu.html">web page</a> and <a href="https://circleci.com/gh/ttrftech/NanoVNA">change log</a> which notes bug fixes and functional changes
 
 <br><br><dt>pluto backup Sep 29 
 <dd><a href="https://groups.io/g/nanovna-users/message/3592">email</a>
