--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -86,11 +86,11 @@ which FWIW is identical to <code>DMR Aug 31</code> "Stuck on firmware?" append: 
 <dt>Gen Hu (product?)
 <dd><a href="https://drive.google.com/drive/folders/1IZEtx2YdqchaTO8Aa9QbhQ8g_Pr5iNhr">Google Drive folder</a>
 
-<br><br><dt>"hugen_900_aa_aug-2-19.dfu" clears memory 
+<br><br><dt>"hugen_900_aa_aug-2-19.dfu" <a href="https://groups.io/g/nanovna-users/message/3587">clears memory</a> 
 <dd><a href="https://groups.io/g/nanovna-users/files/Firmware/All%20%28known%29%20publicly%20available%20NanoVNA%20DFU%20files%20from%20May%205,%202019%20through%20to%20Sept%2029,%202019/hugen/hugen_900_aa_aug-2-19.dfu">DFU</a>
 
 <br><br><dt>Erik firmware files 
-<dd><a href="https://groups.io/g/nanovna-users/files/Firmware">files folder</a> primarily intended for use with <a href="https://groups.io/g/nanovna-users/files/NanoVNA%20PC%20Software/TAPR%20VNA">TAPR VNA v4 PC software</a>
+<dd><a href="https://groups.io/g/nanovna-users/files/Firmware/NanoVNA%20firmware%20build%20by%20Erik">files folder</a> primarily intended for use with <a href="https://groups.io/g/nanovna-users/files/NanoVNA%20PC%20Software/TAPR%20VNA">TAPR VNA v4 PC software</a>
 
 <br><br><dt>edy255 + cho45 nightly builds 
 <dd><a href="https://cho45.stfuawsc.com/NanoVNA/dfu.html">web page</a> and <a href="https://circleci.com/gh/ttrftech/NanoVNA">change log</a> which notes bug fixes and functional changes
