hardware, firmware clarifications

--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -9,6 +9,17 @@
 </head>
 <body>
 
+Reasons you might want to upgrade: &nbsp (<em>thanks to Herb</em>)
+<ol compact>
+<li> TDR capability in firmware.
+<li> Operation up to 1500 MHz (at reduced performance).
+<li> Switch into DFU mode without hardware jumper.
+<li> Change from 2 trace to 4 trace firmware (or vice versa).
+<li> Change to 800 MHz max operation for better device stability
+<li> Enable electrical delay setting
+<li> Bored and looking for trouble.
+</ol>
+
 <h2>nanoVNA firmware versions</a></h2>
 <dl><dt><b>
   Firmware replacement instructions:
