--- a/html/hardware.htm
+++ b/html/hardware.htm
@@ -18,23 +18,25 @@
   </ul> 
 </ul>
 Other hobbyist VNA, antenna analyzer, and software defined radio
-designs share many of these design concepts.
-This open source design was in limited distribution as a kit.
-<h4>The commercialized nanoVNA-H by Hugen reduced cost and enhanced usability</h4>
+designs<br> share many of these design concepts.<br>
+edy255's open source design was in limited distribution <a href="https://ttrf.tk/kit/nanovna/">as a kit</a>.
+<h4>nanoVNA-H commercialized by Hugen reduced cost and enhanced usability</h4>
 <ul>
 <li>working LiPo
 <li>refined touch screen
 <li>better PCB layout, RF shielding
+<li>third harmonic operation 300-900MHz
+<li>Touchstone file export
 <li>standalone PC software
 </ul>
 <h5>At least 5 nanoVNA-H implementations</h5>
 <dl>
 <dt>black, shields, USB-C 
-<dd>Hugen gen111.taobao.com or close clone
+<dd>Hugen's @ <a href="https://item.taobao.com/item.htm?id=588815021483">gen111.taobao.com</a> and close clones
 <br><br><dt>white, micro USB "gekko"
 <dd>initially most available on eBay
 <br><br><dt>black, unshielded, USB-C, missing CH0 script
-<dd>AKA "Worse clone"
+<dd>AKA <a href="https://groups.io/g/nanovna-users/message/158">"Worse clone"</a>
 </dl>
 Variations may come
 <sl compact>
@@ -55,20 +57,21 @@ Variations may come
 <br><dt>NanoVNA-H V2
 <dd>V2 will use two synthesizers that overlap for up to ~ 3 GHz measurement range
 <dd><a href="https://groups.io/g/nanovna-users/search?q=posterid:1988907"https://groups.io/g/nanovna-users/search?q=posterid:1988907">messages</a> by NanoVNA V2 layout designer Gabriel Tenma White
-<br>A preview @ <a href="https://www.rtl-sdr.com/a-nanovna-2-0-is-in-the-works-same-price-frequency-range-up-to-3-5-ghz-higher-dynamic-range/comment-page-1/">RTL-SDR.COM</a><br>
+<br>Diagram from a preview @ <a href="https://www.rtl-sdr.com/a-nanovna-2-0-is-in-the-works-same-price-frequency-range-up-to-3-5-ghz-higher-dynamic-range/comment-page-1/">RTL-SDR.COM</a>:<br>
 <img src=https://groups.io/g/nanovna-users/attachment/3939/0/NanoVNA%20V2%20Preliminary%20Block%20Diagram.png">
 <br clear=all>
 <font size=-2>
 <em>Note the number of switches, making component selection and board layout more critical.</em></font>
+<br><br><dt>"NanoVNA 2"
+<dd>Different from "NanoVNA-H V2"...<br>
+From original nanoVNA inventor Tomohiro AKA edy355,
+per <a href="https://groups.io/g/nanovna-users/message/4129">this message</a>
+<br>J.R.R. Tolkien: "Those who approve of courtesy (at least) to living authors"
 </dl>
 <h5>nanoVNA in name only</h5>
 <dl>
 <dt>NanoVNA-F
-<dd>Larger screen, different processor, RTOS (so obviously firmware), perhaps some similar commands.
-<br>There is a good reason that this has <a href="https://groups.io/g/nanovna-f">its own group</a>
-<dt>"NanoVNA 2"
-<dd>completely unrelated to "NanoVNA-H V2".<br>
-Just seem to have tagged onto the name
-because of its popularity.
+<dd>Larger screen, different processor &amp RTOS (so obviously firmware), perhaps some similar commands.
+<br>This has <a href="https://groups.io/g/nanovna-f">its own group</a> for good reasons.
 </body>
 </html>
