--- a/html/firmware.htm
+++ b/html/firmware.htm
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-Reasons you might want to upgrade: &nbsp (<em>thanks to Herb</em>)
+<details>
+<summary>click for reasons you might want to upgrade</summary>
+ (<em>thanks to Herb</em>)
 <ol compact>
 <li> TDR capability in firmware.
 <li> Operation up to 1500 MHz (at reduced performance).
@@ -19,6 +21,7 @@ Reasons you might want to upgrade: &nbsp (<em>thanks to Herb</em>)
 <li> Enable electrical delay setting
 <li> Bored and looking for trouble.
 </ol>
+</details>
 
 <h2>nanoVNA firmware versions</a></h2>
 <dl><dt><b>
