new firmware SAVE only in CAL

--- a/html/Hnano.htm
+++ b/html/Hnano.htm
@@ -455,10 +455,8 @@ a:visited {
   <li>
     <p>
     <tt>DISPLAY+MARKER +STIMULUS+CAL settings</tt>
-	RECALL SAVE
+	RECALL
     </p>
-  <ul>
-    <li><p>RECALL</p>
       <dl>
         <dt><p>RECALL 0</p></dt>
         <dt><p>RECALL 1</p></dt>
@@ -466,18 +464,6 @@ a:visited {
         <dt><p>RECALL 3</p></dt>
         <dt><p>RECALL 4</p></dt>
       </dl>
-    </li>
-    <li><p>SAVE</p>
-      <dl>
-        <dd><p>SAVE 0</p></dt>
-        <dt><p>SAVE 1</p></dt>
-        <dt><p>SAVE 2</p></dt>
-        <dt><p>SAVE 3</p></dt>
-        <dt><p>SAVE 4</p></dt>
-      </dl>
-    </li>
-    </li>
-  </ul>
   </li>
 </ul>
 
